--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-router": "^4.5.1"
   }
 }
